@@ -22,6 +22,7 @@ import (
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/core/logger"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/fleetapi"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/kibana"
+	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/release"
 )
 
 type store interface {
@@ -64,6 +65,7 @@ type EnrollCmdOption struct {
 	Insecure             bool
 	UserProvidedMetadata map[string]interface{}
 	EnrollAPIKey         string
+	Staging              string
 }
 
 func (e *EnrollCmdOption) kibanaConfig() (*kibana.Config, error) {
@@ -173,11 +175,19 @@ func (c *EnrollCmd) Execute() error {
 	}
 
 	fleetConfig, err := createFleetConfigFromEnroll(resp.Item.AccessAPIKey, c.kibanaConfig)
+	agentConfig := map[string]interface{}{
+		"id": resp.Item.ID,
+	}
+	if c.options.Staging != "" {
+		staging := fmt.Sprintf("https://staging.elastic.co/%s-%s/downloads/", release.Version(), c.options.Staging[:8])
+		agentConfig["download"] = map[string]interface{}{
+			"sourceURI": staging,
+		}
+	}
+
 	configToStore := map[string]interface{}{
 		"fleet": fleetConfig,
-		"agent": map[string]interface{}{
-			"id": resp.Item.ID,
-		},
+		"agent": agentConfig,
 	}
 
 	reader, err := yamlToReader(configToStore)
